@@ -1,5 +1,5 @@
 #!/usr/bin/env python 
 import py
 
-def main(args):
-    py.test.cmdline.main(args) 
+def main(args=None):
+    raise SystemExit(py.test.cmdline.main(args))
